# par-ass2

./: .envrc  .gitignore  Dockerfile  README.md  create_github_issues.py  docker-compose.yml  gazebo.rviz  issues.json  robot_blacklist.txt  start_workspace.sh
.agents/: config.json
.agents/scripts/: gh_comment_issue.sh  gh_create_issue.sh  gh_read_issue.sh  gh_search_issues.sh  gh_update_issue.sh  read_issues_details.sh
.agents/skills/: .gitignore  github.comment_issue.md  github.create_issue.md  github.read_issue.md  github.search_issues.md  github.update_issue.md  github_config.json
docs/: assignment_specification.txt  exploration_improvement_issues.md  exploration_improvements.md  weekly_availabilities.md
docs/diary/: tom.md
docs/drafts/: planning.md
docs/instructions/: exploration_controller.md  sim_instructions_from_rosject.md
docs/llm_usage/: chats.md
docs/llm_usage/tom/: chats.md
docs/llm_usage/tom/roo-code/: roo_task_apr-3-2026_10-28-25-am.md
docs/progress_reports/: tom.md
docs/test_outputs/: navigation_test_2.txt
docs/test_outputs/navigation/: navigation_and_tracing_test_1.txt  navigation_test_4.txt
docs/test_outputs/path_tracing/: past_tracing_teleop_test_0.txt  path_tracing_test_1_reflection.txt
scripts/github/: create_github_issues.py  issues.json
snc/: .env  README.md  configure_package.py  package.xml  setup.cfg  setup.py
snc/config/: params.yml
snc/launch/: find_object.launch.py  master.launch.py  rosbot2.launch.py  sim.launch.py  snc.launch.py
snc/resource/hazards/: hazard_settings.ini
snc/scripts/: .gitignore  home  setup-direnv  start  teleop  topic_bags.py  trigger_listener.py
snc/snc/: ExplorationNode.py  best_effort_repeater.py  constants.py  exploration_control.py  hazard.py  marker_detection_node.py  mock_topics.py  navigation_node.py  object.py  path_tracing_core.py  path_tracing_node.py  test_topic_bags.py  trigger_listener.py  twist_mux.py
snc/snc_interfaces/: CMakeLists.txt  package.xml
snc/test/: comprehensive_runtime_test.py  node1_runtime_test.py  node2_detect_start_test.py  node2_runtime_test.py  node3_runtime_test.py  runtime_test_path_tracing.py  test_path_tracing_challenge_topics.py  test_path_tracing_trigger_teleop.py  test_path_tracing_trigger_topics.py  test_path_tracing_unit.py  test_startup_sync.py
snc_interfaces/: package.xml
snc_interfaces/srv/: ExplorationControl.srv
test_outputs/: node2_detected_marker_but_failed_transform.txt
