<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>snc</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tomgosling57@gmail.com">tomg</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>find_object_2d_msgs</depend>
  <exec_depend>aiil_gazebo</exec_depend>
  <depend>aiil_gazebo</depend> 
  <depend>nav2_*</depend>
  <depend>slam_toolbox</depend>
  <depend>find_object_2d</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
